@@ -25,6 +25,7 @@
 #include <pygtk/pygtk.h> //For the PyGObject and PyGBoxed struct definitions.
 
 #include <Python.h>
+
 #include <glom/libglom/document/document_glom.h>
 #include <glom/libglom/data_structure/field.h>
 #include <glibmm/ustring.h>
