@@ -21,7 +21,6 @@
 #ifndef GLOM_PYTHON_GLOM_RELATED_H
 #define GLOM_PYTHON_GLOM_RELATED_H
 
-#include <Python.h>
 #include <glom/libglom/python_embed/py_glom_record.h>
 #include <glom/libglom/data_structure/relationship.h>
 
