@@ -23,7 +23,6 @@
 
 #include <Python.h>
 
-
 #ifndef PyMODINIT_FUNC	/* declarations for DLL import/export */
 //#define PyMODINIT_FUNC void
 #endif
